--- a/staging/main.css
+++ b/staging/main.css
@@ -154,30 +154,39 @@
 }
 
 /* -- Solutions  -- */
-@media screen and (min-width: 992px) {
-  .page-loaded .solution_path-img {
-    -webkit-mask-image: url("https://uploads-ssl.webflow.com/65fb502f8371aab95edce0e0/65ff143bbf27147c20b0beec_Group%201413371878%20(1)%20(1).png");
-    mask-image: url("https://uploads-ssl.webflow.com/65fb502f8371aab95edce0e0/65ff143bbf27147c20b0beec_Group%201413371878%20(1)%20(1).png");
-    -webkit-mask-size: contain;
-    mask-size: contain;
-    mask-repeat: no-repeat;
-    mask-position: center;
-    -webkit-mask-repeat: no-repeat;
-    -webkit-mask-position: center;
+.solution_path-img {
+  -webkit-mask-image: url("https://uploads-ssl.webflow.com/65fb502f8371aab95edce0e0/65ff143bbf27147c20b0beec_Group%201413371878%20(1)%20(1).png");
+  mask-image: url("https://uploads-ssl.webflow.com/65fb502f8371aab95edce0e0/65ff143bbf27147c20b0beec_Group%201413371878%20(1)%20(1).png");
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+}
+
+.is-visible .solution_path-gradient {
+  animation: moveGradient 7s linear infinite;
+}
+
+@media screen and (max-width: 991px) {
+  .solution_path-img {
+    -webkit-mask-image: url("https://uploads-ssl.webflow.com/6621514b709792c087767bd3/662ffa4e0a6781771200cad6_Group%201413371914%20(1).png");
+    mask-image: url("https://uploads-ssl.webflow.com/6621514b709792c087767bd3/662ffa4e0a6781771200cad6_Group%201413371914%20(1).png");
   }
 
-  .is-visible .solution_path-gradient {
-    animation: moveGradient 7s linear infinite;
+  .solution_path-gradient {
+    animation-duration: 12s;
   }
+}
 
-  @keyframes moveGradient {
-    0% {
-      transform: translateX(-100%);
-    }
-    80%,
-    100% {
-      transform: translateX(650%);
-    }
+@keyframes moveGradient {
+  0% {
+    transform: translateX(-100%);
+  }
+  80%,
+  100% {
+    transform: translateX(650%);
   }
 }
 
